# auralink

Examples/bh1750/: bh1750.ino
Examples/dht22/: dht22.ino
Examples/eink2.ino/: eink2.ino.ino
Examples/max4466_db/: max4466_db.ino
Examples/mq135/: mq135.ino
Examples/tft/: tft.ino
ai-backend-go/backend/: .env  main.go
auralink/: User_Setup.h  airquality.cpp  airquality.h  auralink.ino  battery.cpp  battery.h  danger.cpp  danger.h  display.cpp  display.h  display_manager.cpp  display_manager.h  illumination.cpp  illumination.h  lv_functions.h  mqtt.cpp  mqtt.h  pressure.cpp  pressure.h  thermohygrometer.cpp  thermohygrometer.h  time_source.cpp  time_source.h  update_ui.cpp  update_ui.h  uv.cpp  uv.h  wifi.h  wifi_connector.cpp  wifi_connector.h
auralink/libraries/: lv_conf.h
auralink/libraries/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_DailyQuote.c  ui_DailyQuote.h  ui_EmailSummary.c  ui_EmailSummary.h  ui_Screen1.c  ui_Screen1.h  ui_SensorData.c  ui_SensorData.h  ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_notificationbar.c  ui_comp_notificationbar.h  ui_comp_wifiicon.c  ui_comp_wifiicon.h  ui_events.h  ui_img_aq_png.c  ui_img_chargingicon_png.c  ui_img_light_png.c  ui_img_pressure_png.c  ui_img_pub_png.c  ui_img_rh_png.c  ui_img_sound_png.c  ui_img_sub_png.c  ui_img_temperature_png.c  ui_img_uv_png.c  ui_img_wifiicon_png.c
auralink/libraries/ui/src/: ui.c  ui_Screen1.c  ui_Screen1.h  ui_helpers.c
auralink/utils/: utils.h
mqtt/: deploy.sh
mqtt/auralink-server/: Dockerfile  (+1 more)
pcb/: auralink_pcb.fzz
removed/: thb.cpp  thb.h
(+29 files in other folders)
